use basic auth instead request body
