# src/app/swagger.json
@@ -53,19 +53,7 @@
         "summary": "check user password",
         "description": "register new user",
         "operationId": "CheckPassword",
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "required": ["username", "password"],
-                "properties": {
-                  "username": { "type": "string" },
-                  "password": { "type": "string" }
-                }
-              }
-            }
-          }
-        },
+        "security": [{ "basicAuth": [] }],
         "responses": {
           "200": {
             "description": "Result",
@@ -117,10 +105,9 @@
       }
     },
     "securitySchemes": {
-      "bearerAuth": {
+      "basicAuth": {
         "type": "http",
-        "scheme": "bearer",
-        "bearerFormat": "JWT"
+        "scheme": "basic"
       }
     }
   }
